--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
+    "react-loader-spinner": "^4.0.0",
+    "react-modal": "^3.14.4",
+    "react-responsive-masonry": "^2.1.4",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-share-social": "^0.1.48",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -45,6 +49,12 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.8",
+    "eslint": "^8.3.0",
+    "eslint-config-airbnb": "^19.0.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
