--- a/frontend_sanity/package.json
+++ b/frontend_sanity/package.json
@@ -14,8 +14,8 @@
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^4.0.0",
+    "react-masonry-css": "^1.0.16",
     "react-modal": "^3.14.4",
-    "react-responsive-masonry": "^2.1.4",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-share-social": "^0.1.48",
